--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 
                    <ul>
                      
-                     <li><a href=""><img src=".ekko.png"></a></li>
+                     <li><a href=""><img src="ekko.png"></a></li>
                      <li><a href=""><img src="jinx.png"></a></li>
                      <li><a href=""><img src="lee sin.png"></a></li>
                      <li><a href=""><img src="riven.png"></a></li>
