--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
              <nav id="menu">
                  <ul>
                      <li><a href="">MENU</a></li>
-                     <li><a href="">GUIAS</a></li>
-                     <li><a href="">PERSONAJES</a></li>
-                     <li><a href="">NOTICIAS</a></li>
+                     <li><a href="guias.html">GUIAS</a></li>
+                     <li><a href="personajes.html">PERSONAJES</a></li>
+                     <li><a href="noticias.html">NOTICIAS</a></li>
                  </ul>
               
              </nav>
